--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/styled-components": "^5.1.3",
+    "axios": "^0.20.0",
+    "easy-peasy": "^3.3.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "styled-components": "^5.2.0",
+    "styled-icons": "^10.19.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
