--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "easy-peasy": "^3.3.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
