--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.3",
     "axios": "^0.20.0",
+    "dotenv": "^8.2.0",
     "easy-peasy": "^3.3.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
