--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
     "styled-icons": "^10.19.0",
+    "swr": "^0.3.5",
     "typescript": "~3.7.2"
   },
   "scripts": {
