--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,11 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.3",
     "axios": "^0.20.0",
-    "dotenv": "^8.2.0",
     "easy-peasy": "^3.3.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.0",
+    "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
@@ -45,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.10.6"
   }
 }
