--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-tabs": "^2.3.2",
     "@types/styled-components": "^5.1.3",
     "axios": "^0.20.0",
     "easy-peasy": "^3.3.1",
@@ -20,6 +21,7 @@
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-tabs": "^3.1.1",
     "styled-components": "^5.2.0",
     "styled-icons": "^10.19.0",
     "swr": "^0.3.5",
