--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-tabs": "^2.3.2",
+    "@types/react-transition-group": "^4.4.0",
     "@types/styled-components": "^5.1.3",
     "axios": "^0.20.0",
     "easy-peasy": "^3.3.1",
+    "framer-motion": "^3.1.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.0",
