--- a/backend/src/requirements.txt
+++ b/backend/src/requirements.txt
@@ -3,3 +3,6 @@ django-cors-headers==3.5.0
 djangorestframework==3.11.1
 psycopg2-binary==2.8.6
 django-filter==2.4.0
+channels==3.0.3
+channels-redis==3.2.0
+djangorestframework-simplejwt==4.6.0
