--- a/backend/src/docker-compose.yaml
+++ b/backend/src/docker-compose.yaml
@@ -12,7 +12,10 @@ services:
             - 80:80
         command: >
             bash -c 
-            "python manage.py runserver 0.0.0.0:8000"
+            "
+            python manage.py makemigrations &&
+            python manage.py migrate && 
+            python manage.py runserver 0.0.0.0:8000"
         volumes:
             - .:/app
 
