--- a/Frontend-MicroFrontends/search/package.json
+++ b/Frontend-MicroFrontends/search/package.json
@@ -58,10 +58,10 @@
     "@types/react-dom": "^16.9.6",
     "@types/systemjs": "^6.1.0",
     "@types/webpack-env": "^1.16.0",
-    "axios": "^0.21.1",
     "framer-motion": "^4.1.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "single-spa": "^5.9.2",
     "styled-icons": "^10.33.0"
   }
 }
