--- a/Frontend-MicroFrontends/feed/package.json
+++ b/Frontend-MicroFrontends/feed/package.json
@@ -63,6 +63,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "single-spa": "^5.9.2",
+    "styled-icons": "^10.33.0",
     "swr": "^0.5.5"
   }
 }
