--- a/Frontend-MicroFrontends/notifications-page/package.json
+++ b/Frontend-MicroFrontends/notifications-page/package.json
@@ -6,9 +6,8 @@
     "build": "webpack --mode=production",
     "analyze": "webpack --mode=production --env analyze",
     "lint": "eslint src --ext js,ts,tsx",
-    "format": "prettier --write .",
-    "check-format": "prettier --check .",
-    "test": "cross-env BABEL_ENV=test jest",
+    "format": "prettier --write \"./**\"",
+    "test": "cross-env BABEL_ENV=test jest --passWithNoTests",
     "watch-tests": "cross-env BABEL_ENV=test jest --watch",
     "coverage": "cross-env BABEL_ENV=test jest --coverage"
   },
