--- a/Frontend-MicroFrontends/stories/package.json
+++ b/Frontend-MicroFrontends/stories/package.json
@@ -6,7 +6,7 @@
     "build": "webpack --mode=production",
     "analyze": "webpack --mode=production --env analyze",
     "lint": "eslint src --ext js,ts,tsx",
-    "format": "prettier --write \"./**\"",
+    "format": "prettier --write './**'",
     "test": "cross-env BABEL_ENV=test jest --passWithNoTests",
     "watch-tests": "cross-env BABEL_ENV=test jest --watch",
     "coverage": "cross-env BABEL_ENV=test jest --coverage"
@@ -59,6 +59,8 @@
     "@types/webpack-env": "^1.16.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-horizontal-scrolling-menu": "^0.7.10",
+    "react-modal": "^3.14.2",
     "styled-components": "^5.3.0"
   }
 }
