--- a/Frontend-MicroFrontends/freinds-chat/package.json
+++ b/Frontend-MicroFrontends/freinds-chat/package.json
@@ -60,6 +60,7 @@
     "@types/systemjs": "^6.1.0",
     "@types/webpack-env": "^1.16.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "styled-icons": "^10.34.0"
   }
 }
