--- a/Frontend-MicroFrontends/stories/package.json
+++ b/Frontend-MicroFrontends/stories/package.json
@@ -61,6 +61,7 @@
     "react-dom": "^17.0.1",
     "react-horizontal-scrolling-menu": "^0.7.10",
     "react-modal": "^3.14.2",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "styled-icons": "^10.35.0"
   }
 }
