--- a/Frontend-MicroFrontends/settings/package.json
+++ b/Frontend-MicroFrontends/settings/package.json
@@ -57,7 +57,9 @@
     "@types/react-dom": "^16.9.6",
     "@types/systemjs": "^6.1.0",
     "@types/webpack-env": "^1.16.0",
+    "colord": "^2.0.1",
     "react": "^17.0.1",
+    "react-colorful": "^5.2.2",
     "react-dom": "^17.0.1",
     "react-tabs": "^3.2.2",
     "styled-components": "^5.2.3"
