--- a/Frontend-MicroFrontends/notifications-page/package.json
+++ b/Frontend-MicroFrontends/notifications-page/package.json
@@ -58,7 +58,6 @@
     "@types/systemjs": "^6.1.0",
     "@types/webpack-env": "^1.16.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "styled-components": "^5.3.0"
+    "react-dom": "^17.0.1"
   }
 }
