--- a/Frontend-MicroFrontends/package.json
+++ b/Frontend-MicroFrontends/package.json
@@ -7,5 +7,8 @@
     "build-all": "concurrently \"cd Root-Conf && yarn build\" \"cd navbar && yarn build\" \"cd util-module && yarn build\" \"cd globalStyles && yarn build\" \"cd not-found && yarn build\" \"cd create-post && yarn build\" \"cd feed && yarn build\" \"cd post && yarn build\" \"cd profile && yarn build\" \"cd login && yarn build\" \"cd register && yarn build\" \"cd freinds-chat && yarn build\" \"cd chat && yarn build\" \"cd search && yarn build\" \"cd settings && yarn build\" \"cd notifications && yarn build\" \"cd notifications-page && yarn build\" \"cd stories && yarn build\""
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "styled-components": "^5.3.0"
+  }
 }
