--- a/Frontend-MicroFrontends/globalStyles/package.json
+++ b/Frontend-MicroFrontends/globalStyles/package.json
@@ -58,6 +58,7 @@
     "@types/systemjs": "^6.1.0",
     "@types/webpack-env": "^1.16.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.3.0"
   }
 }
