--- a/Frontend-MicroFrontends/profile/package.json
+++ b/Frontend-MicroFrontends/profile/package.json
@@ -13,9 +13,10 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged && concurrently yarn:test yarn:lint"
+      "pre-commit": "" 
     }
   },
+
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/plugin-transform-runtime": "^7.12.1",
